Replace all .m4 files with .md (MarkDown) files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 Hello!
 </h2>
 
-_IMAGE(my_photo3.jpg, My foto)
+<img class="pict" src="img/my_photo3.jpg" >
 
 <p>
 My name is Alexander Sashnov. Welcome to my homepage.
