new pages: Android, EasyRepo, English. Publish Palmano source code. Add screenshot for Tetris

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ My name is Alexander Sashnov. Welcome to my homepage.
 <p>
 I live in 
 <a href="http://maps.google.com/maps?f=q&amp;hl=en&amp;q=Novosibirsk,+Russia&amp;ie=UTF8&amp;ll=55.040024,82.929955&amp;spn=0.126691,0.374222&amp;t=k&amp;om=1">Novosibirsk, Russia</a>
-and I work at _LINK(http://jetico.com/, Jetico Inc, Oy)
+and I work at <a href="http://jetico.com/">Jetico Inc, Oy</a>
 as a software developer.
 </p>
 
@@ -33,9 +33,9 @@ who interesting it too.
 </p>
 
 <p>
-You can send me any comments, suggestions and others via
-_MAILME(e-mail) or _LINK(xmpp://asashnov@jabber.ru, Jabber).<br />
-Use my _LINK(files/my_gpg_public.key, GPG key) for privacy.
+Send me any comments, suggestions and other ideas to
+<a href="mailto:sashnov@ngs.ru">e-mail</a>.<br />
+Use <a href="files/my_gpg_public.key">my GPG key</a> for privacy.
 </p>
 
 {% include linux_registered.html %}
