add Google analytics

--- a/index.html
+++ b/index.html
@@ -44,4 +44,4 @@ Use <a href="files/my_gpg_public.key">my GPG key</a> for privacy.
 
 {% include get_openoffice.html %}
 
-{% include counter.html %}
+{% include google-analytics.js %}
