update my email

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ who interesting it too.
 
 <p>
 Send me any comments, suggestions and other ideas to
-<a href="mailto:sashnov@ngs.ru">e-mail</a>.<br />
+<a href="mailto:asashnov@rambler.ru">e-mail</a>.<br />
 Use <a href="files/my_gpg_public.key">my GPG key</a> for privacy.
 </p>
 
