--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@ who interesting it too.
 <p>
 Send me any comments, suggestions and other ideas to
 <a href="mailto:asashnov@rambler.ru">e-mail</a>.<br />
-Use <a href="files/my_gpg_public.key">my GPG key</a> for privacy.
+You may want use <a href="files/asashnov.pgp">my OpenPGP key</a> for privacy.
 </p>
+
+<p>My previous email sashnov@ngs.ru is no longer available because ngs.ru terminated their mail service in 2024.</p>
 
 {% include linux_registered.html %}
 
